Fix the style issue on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -62,8 +62,8 @@ header.d-header {
         /* width: 15%!important; */
         display: flex;
         flex: 1 1;
-        max-width: 50%;
-        height: 39px;
+        max-width: unset;
+        height: unset;
 
         > a {
             margin: 22px 0 10px 0;
